--- a/public/css/LoginSigninCss/loginSignInDesign.css
+++ b/public/css/LoginSigninCss/loginSignInDesign.css
@@ -1,18 +1,10 @@
-:root{
-    --bgBlack: #242424;
-    --black: #000000;
-    --primaryColor: #FFD7B1;
-    --gray: #B3B3B3;
-    --placeholder: #555555;
-    --white: white;
-    --btnBg: #A8A8A8;
-}
-
 .backgroundContainer {
     background-color: var(--bgBlack);
     min-height: 100vh;
     border: 2px solid var(--black);
     font-family: Vollkorn;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-control {
