--- a/public/css/MainDesignCss/mainDesign.css
+++ b/public/css/MainDesignCss/mainDesign.css
@@ -3,19 +3,28 @@ body {
 }
 
 .sidebar {
-    width: 12vw; /* Ширина боковой панели */
-    height: 100vh;
+    display: flex;
+    width: 10vw; /* Ширина боковой панели */
+    height: 95vh;
     background-color: var(--sliderBG);
     position: fixed;
-    left: 0;
-    top: 0;
-    display: flex;
+    left: 0.5vw;
+    top: 2vh;
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
-    z-index: 1000;
+    z-index: 500;
     font-family: Volkorn; 
-    font-size: 15pt;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    opacity: 1;
+    transform: translateX(0);
+    border-radius: 20px;
+}
+
+.sidebar.hidden {
+    opacity: 0;
+    transform: translateX(-100%);
+    pointer-events: none; /* Чтобы нельзя было кликнуть по скрытому сайдбару */
 }
 
 .main-content {
@@ -30,6 +39,7 @@ body {
     align-items: center;
     color: white;
     text-decoration: none;
+    font-size: 12pt;
 }
 
 .user {
@@ -42,8 +52,8 @@ body {
 }
 
 .userImg {
-    width: 84px;
-    height: 84px;
+    width: 64px;
+    height: 64px;
     border: 1px solid var(--primaryColor);
     border-radius: 50%;
     object-fit:cover;
@@ -56,7 +66,6 @@ body {
 .svg {
     width: 32px;
     height: 32px;
-    margin-bottom: 10px;
 }
 
 .profileLink {
@@ -72,7 +81,7 @@ body {
 
 .bodyContainer {
     width: 60%;
-    margin: 15vh 25vw;
+    margin: 10vh 25vw;
     align-items: center;
     color: white;
     font-family: Vollkorn;
@@ -148,3 +157,27 @@ body {
     color: var(--white);
 }
 
+.sidebarBTN {
+    background-color: transparent;
+    border: 0;
+    position: fixed;
+    top: 3vh;
+    left: 2vw;
+    z-index: 1000;
+    opacity: 1;
+}
+
+.sidebarBTN .svg path{
+    fill: white;
+}
+
+.sidebarBTN .svg:hover path {
+    transition: all 0.2s linear;
+    fill: var(--primaryColor);
+}
+
+.sidebarBTN.hidden {
+    opacity: 0;
+    transform: translateX(-100%);
+    pointer-events: none; /* Чтобы нельзя было кликнуть по скрытому сайдбару */
+}
