--- a/public/css/MainDesignCss/collectionDesign.css
+++ b/public/css/MainDesignCss/collectionDesign.css
@@ -23,7 +23,7 @@
 }
 
 .allPlaylistContainer {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(128px, 1fr));
     gap: 20px;
     padding: 20px;
     padding-top: 0;
@@ -33,4 +33,28 @@
     background-color: var(--bgBlack);
     border: 0;
     margin-right: 2vw;
+}
+
+.playlistCollection {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.headCont {
+    display: flex;
+    justify-content: space-between;
+}
+
+.createPlaylistBTN {
+    width: 128px;
+    height: 128px;
+    border-radius: 10%;
+    background-color: var(--grayBlack);
+    border-color: var(--grayBlack);
+}
+
+.playlist-item {
+    height: fit-content;
 }
