--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -1,5 +1,6 @@
 :root{
     --bgBlack: #222222;
+    --grayBlack:#5a5a5a22;
     --black: #000000;
     --primaryColor: #FFD7B1;
     --gray: #B3B3B3;
@@ -107,4 +108,10 @@
 .backBTN:hover path{
     transition: all .2s;
     fill: var(--primaryColor);
+}
+
+.createPlaylistBTN:hover {
+    transition: all 0.2s linear;
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 5px var(--primaryColor);
 }
