Обновление бд, чтение данных из бд и тд.

--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -3,6 +3,7 @@
     --grayBlack:#5a5a5a22;
     --black: #000000;
     --primaryColor: #FFD7B1;
+    --primaryColorDark: #ffd7b1ee;
     --gray: #B3B3B3;
     --placeholder: #555555;
     --white: white;
