--- a/resources/sass/audioplayer.scss
+++ b/resources/sass/audioplayer.scss
@@ -3,15 +3,19 @@
 #audio-player-app {
     position: fixed;
     bottom: 2vh;
-    left: 2vw;
+    left: 0px;
+    right: 0px;
+    margin: auto;
     width: 100%;
+    z-index: 500;
 
     #player-container {
         display: flex;
-        background-color: black;
+        background-color: var(--sliderBG);
         width: 100%;
         height: 12vh;
         padding: 0 2%;
+
         justify-content: space-between;
 
         .track-info {
@@ -19,10 +23,19 @@
             display: flex;
             align-items: center;
 
-            img {
+            .playlist_image {
+                background-color: var(--grayBlack);
                 width: 64px;
                 height: 64px;
-                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 20px;
+            
+                img {
+                    width: 32px;
+                    height: 32px;
+                }
             }
 
             .track-text-info {
