--- a/resources/sass/tracksList.scss
+++ b/resources/sass/tracksList.scss
@@ -1,6 +1,6 @@
 @use 'colors';
 
-.tracksList, .tracks_list {
+.tracksList, .playlistTracks, .tracks_list {
     background-color: var(--bgBlack);
     border-radius: 20px;
     border: 2px solid var(--gray);
