Апдейт имени Горбачёва. Переход на InertiaJS, перенос страницы на Vue.Js

--- a/resources/sass/includeAll.scss
+++ b/resources/sass/includeAll.scss
@@ -9,3 +9,13 @@
 @use 'artist';
 
 @use 'album';
+
+@use 'animations';
+
+@use 'collection';
+
+@use 'mainDesign';
+
+@use 'playlistDesign';
+
+@use 'user';
