--- a/resources/sass/tracksList.scss
+++ b/resources/sass/tracksList.scss
@@ -5,6 +5,7 @@
     border-radius: 20px;
     border: 2px solid var(--gray);
     list-style-type: none;
+    width: 35vw;
 
     .trackLink, .track_element {
         text-decoration: none;
