--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -1,6 +1,7 @@
 :root{
     --bgBlack: #222222;
-    --grayBlack:#5a5a5a22;
+    --bgDark:#1a1a1a;
+    --grayBlack:#63636322;
     --black: #000000;
     --primaryColor: #FFD7B1;
     --primaryColorDark: #ffd7b1ee;
