--- a/resources/sass/mainDesign.scss
+++ b/resources/sass/mainDesign.scss
@@ -105,7 +105,7 @@ body {
 
 .bodyContainer {
     width: 70%;
-    margin: 10vh 20vw;
+    margin: 10vh auto;
     align-items: center;
     color: white;
     font-family: Vollkorn;
