Много чего, точно не скажу

--- a/resources/sass/playlist.scss
+++ b/resources/sass/playlist.scss
@@ -55,6 +55,7 @@
     padding: 8px 16px;
     cursor: pointer;
     transition: all 0.2s linear;
+    white-space: nowrap;
 }
 
 .dropdown__menu ul {
