--- a/resources/sass/audioplayer.scss
+++ b/resources/sass/audioplayer.scss
@@ -57,6 +57,11 @@
             border: none;
             cursor: pointer;
         }
+
+        .lower {
+            height: 32px !important;
+            width: 32px !important;
+        }
     
         .icon {
             width: 42px;
@@ -127,6 +132,8 @@
                 align-items: center;
                 width: 100%;
             }
+
+            
         }
 
 
@@ -144,12 +151,69 @@
             .icons_additional:hover {
                 transition: all 0.2s linear;
                 fill: var(--primaryColor);
-              }
+            }
 
         }
         
 
     }
+}
+
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+
+    .menu-popup {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transform: translateY(-50%);
+        background-color: var(--sliderBG);
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        z-index: 100;
+        margin:0;
+
+        .dropdownContent {
+            list-style-type: none;
+            white-space: nowrap;
+            color:var(--white);
+            cursor: pointer;
+            border-bottom: 1px solid var(--grayBlack);
+            padding: 10px;
+        }   
+
+        .dropdownContent:hover {
+            transition: all 0.2s linear;
+            color: var(--primaryColor);
+            border-color: var(--gray);
+        }
+    }
+
+    .submenu-popup {
+        position: absolute;
+        width: 200px;
+        background: var(--sliderBG);
+        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+        border-radius: 8px;
+        padding: 0;
+        z-index: 10;
+        left: 100%;
+        bottom: 0;
+
+        .submenu-item {
+            list-style-type: none;
+            padding: 8px 15px;
+            cursor: pointer;
+            color:var(--white)
+        }
+
+        .submenu-item:hover {
+            background-color: var(--primaryColor);
+        }
+    }
+
 }
 
 .volume-container {
@@ -175,11 +239,11 @@
         width: 8px;
         height: 100px;
         padding: 0 5px;
-        background: var(--primaryColor);
         outline: none;
         opacity: 0.9;
         transition: opacity 0.2s;
     }
+
     .volume-slider-vertical:hover {
         opacity: 1;
     }
@@ -188,15 +252,15 @@
         -webkit-appearance: none;
         width: 14px;
         height: 14px;
-        background: var(--primaryColor);
         border-radius: 50%;
         cursor: pointer;
     }
+
 }
 
 
 .fade-enter-active, .fade-leave-active {
-  transition: opacity 0.2s;
+  transition: opacity 0.5s;
 }
 .fade-enter-from, .fade-leave-to {
   opacity: 0;
