Голый синхронный плеер

--- a/resources/sass/audioplayer.scss
+++ b/resources/sass/audioplayer.scss
@@ -337,6 +337,7 @@
 
                     .queue-track-name {
                         font-weight: 500;
+                        color: var(--white);
                     }
 
                     .queue-artist {
@@ -401,6 +402,7 @@
 
                 .queue-track-name {
                     font-weight: 500;
+                    color: var(--white);
                 }
 
                 .queue-artist {
