--- a/resources/sass/audioplayer.scss
+++ b/resources/sass/audioplayer.scss
@@ -297,6 +297,7 @@
             justify-content: space-between;
             align-items: center;
             border-bottom: 1px solid var(--border-color);
+            color: var(--white);
 
             .close-queue {
                 background: none;
