--- a/resources/sass/audioplayer.scss
+++ b/resources/sass/audioplayer.scss
@@ -379,6 +379,7 @@
         .next-up-section {
             border-top: 1px solid var(--gray);
             padding: 15px 20px;
+            overflow-y: scroll;
 
             h4 {
                 margin-bottom: 10px;
